--- a/HTML-EF/Kontakta.html
+++ b/HTML-EF/Kontakta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 	<head>
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
