--- a/HTML-EF/index.html
+++ b/HTML-EF/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 	<head>
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
@@ -32,7 +32,7 @@
 				<td>
   				<div class="left"> <!--Information gällande filskar för varje kollumn i samma rad, Indelat i <tr>(table rows)-->
 							<h4 class="in-header">Laxfilé Fryst</h4>
-							<img class="in-pic"src="../BILDER-EF/Lax.png">
+							<img class="in-pic"src="../BILDER-EF/Lax.png"alt="Lax">
 							<div class="FiskText">
 								<ul>
 									<li>
@@ -48,7 +48,7 @@
 							</div>
 							<!--Köp funktion till fiskarna <a> till Tack för ditt köp Sidan!-->
 						<a href="omfisk.html">	<button href="omfisk.html" class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
-								<h1>KÖP 94:-</h1>
+								<h2>KÖP 94:-</h2>
 							</button>
 						</a>
 					</div>
@@ -56,7 +56,7 @@
 				<td>
   			<div class="middle">
 					<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-						<img class="in-pic"src="../BILDER-EF/Torsk.png">
+						<img class="in-pic"src="../BILDER-EF/Torsk.png"alt="Torsk">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -71,14 +71,14 @@
 					</div>
 						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
-						<h1>KÖP 79:-</h1>
+						<h2>KÖP 79:-</h2>
 					</button></a>
 				</div>
 			</td>
 				<td>
   		<div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png"alt="Tonfisk">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -94,7 +94,7 @@
 				</div>
 					<a href="omfisk.html">
 				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
-					<h1>KÖP 63:-</h1>
+					<h2>KÖP 63:-</h2>
 				</button></a>
 			</div>
 		</td>
@@ -103,7 +103,7 @@
 			<td>
 			<div class="left">
 				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="../BILDER-EF/Lax.png">
+				<img class="in-pic"src="../BILDER-EF/Lax.png"alt="Lax">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -119,14 +119,14 @@
 				</div>
 					<a href="omfisk.html">
 				<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
-				<h1>KÖP 94:-</h1>
+				<h2>KÖP 94:-</h2>
 			</button></a>
 			</div>
 		</td>
 			<td>
 			<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="../BILDER-EF/Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png"alt="Torsk">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -141,14 +141,14 @@
 					</div>
 						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
-						<h1>KÖP 79:-</h1>
+						<h2>KÖP 79:-</h2>
 					</button></a>
 					</div>
 				</td>
 			<td>
 			<div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png"alt="Tonfisk">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -164,7 +164,7 @@
 				</div>
 					<a href="omfisk.html">
 				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
-					<h1>KÖP 63:-</h1>
+					<h2>KÖP 63:-</h2>
 				</button></a>
 			</div>
 		</td>
@@ -173,7 +173,7 @@
 			<td>
 			<div class="left">
 				<h4 class="in-header">Laxfilé Fryst</h4>
-				<img class="in-pic"src="../BILDER-EF/Lax.png">
+				<img class="in-pic"src="../BILDER-EF/Lax.png"alt="Lax">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -189,14 +189,14 @@
 				</div>
 					<a href="omfisk.html">
 				<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
-				<h1>KÖP 94:-</h1>
+				<h2>KÖP 94:-</h2>
 			</button></a>
 			</div>
 		</td>
 			<td>
 			<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="../BILDER-EF/Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png"alt="Torsk">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -211,14 +211,14 @@
 					</div>
 						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="A-tag" id="buy-button2" type="button" name="button">
-						<h1>KÖP 79:-</h1>
+						<h2>KÖP 79:-</h2>
 					</button></a>
 			</div>
 		</td>
 			<td>
 			<div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png"alt="Tonfisk">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -234,7 +234,7 @@
 				</div>
 					<a href="omfisk.html">
 				<button onclick="A-tag"class="Pröjsa" id="buy-button3" type="button" name="button">
-					<h1>KÖP 63:-</h1>
+					<h2>KÖP 63:-</h2>
 				</button></a>
 			</div>
 		</td>
@@ -259,14 +259,14 @@
 				</div>
 					<a href="omfisk.html">
 					<button class="Pröjsa" onclick="Allt()" id="buy-button1" type="button" name="button">
-					<h1>KÖP 94:-</h1>
+					<h2>KÖP 94:-</h2>
 				</button></a>
 			</div>
 		</td>
 			<td>
 			<div class="middle">
 				<h4 class="in-header">Torskryggfilé Fryst MSC-märkt</h4>
-					<img class="in-pic"src="../BILDER-EF/Torsk.png">
+					<img class="in-pic"src="../BILDER-EF/Torsk.png"alt="Torsk">
 						<div class="FiskText">
 							<ul>
 								<li>
@@ -281,13 +281,13 @@
 					</div>
 						<a href="omfisk.html">
 						<button class="Pröjsa" onclick="Allt()" id="buy-button2" type="button" name="button">
-						<h1>KÖP 79:-</h1>
+						<h2>KÖP 79:-</h2>
 					</button></a>
 				</div>
 			</td>
 			<td><div class="right">
 				<h4 class="in-header">Tonfisk 2*125g</h4>
-				<img class="in-pic"src="../BILDER-EF/Tonfisk.png">
+				<img class="in-pic"src="../BILDER-EF/Tonfisk.png"alt="Tonfisk">
 					<div class="FiskText">
 						<ul>
 							<li>
@@ -303,7 +303,7 @@
 				</div>
 					<a href="omfisk.html">
 				<button onclick="Atag(this)"class="Pröjsa" id="buy-button3" type="button" name="button">
-					<h1>KÖP 63:-</h1>
+					<h2>KÖP 63:-</h2>
 				</button></a>
 			</div>
 		</td>
