--- a/HTML-EF/om.html
+++ b/HTML-EF/om.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 	<head>
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/Martin.css">
 		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
@@ -19,7 +19,10 @@
 				</div>
 				<br> <br>
 				<br> <br>
-					<div class="sec"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed blandit libero volutpat sed cras ornare arcu. Facilisis leo vel fringilla est ullamcorper eget. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus. Bibendum at varius vel pharetra vel turpis. Potenti nullam ac tortor vitae purus faucibus. Odio morbi quis commodo odio aenean sed adipiscing diam. Egestas integer eget aliquet nibh praesent tristique magna. Dictum non consectetur a erat. Blandit libero volutpat sed cras.
+					<div class="sec"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed blandit libero
+						volutpat sed cras ornare arcu. Facilisis leo vel fringilla est ullamcorper eget. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Placerat
+						duis ultricies lacus sed turpis tincidunt id aliquet risus. Bibendum at varius vel pharetra vel turpis. Potenti nullam ac tortor vitae purus faucibus. Odio morbi
+						quis commodo odio aenean sed adipiscing diam. Egestas integer eget aliquet nibh praesent tristique magna. Dictum non consectetur a erat. Blandit libero volutpat sed cras.
 
 						<!-- Slideshow container -->
 						<div class="slideshow-container">
