--- a/HTML-EF/omfisk.html
+++ b/HTML-EF/omfisk.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 	<head>
-		<script src="js/javascript.js" type="text/javascript"></script>
-		<style> h1	{
-			font-size: 40px;
-		}
-			h3 {
-				font-size: 36px;
-			}
-		</style>
-		<link rel="stylesheet" type="text/css" href="css/Martin.css">
-		<link rel="stylesheet" type="text/css" href="css/grid.css">
+		<script src="../JS-EF/javascript.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="../CSS-Ef/Martin.css">
+		<link rel="stylesheet" type="text/css" href="../CSS-EF/grid.css">
 		<title>Evigt Fiske</title>
 		<meta charset="utf-8">
 	</head>
@@ -27,7 +20,7 @@
 				  <div class="column3"><a href="Kontakta.html"><br>Kontakta Oss</a></div>
 				</div>
 
-				<img class="Salmone" src="salmone.jpeg">
+				<img class="Salmone" src="../BILDER-EF/salmone.jpeg">
 				<h2 class="Tack">Tack för ditt Köp!</h2>
 </body>
 </html>
